--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "apisauce": "^2.1.1",
     "lottie-ios": "^3.1.8",
     "lottie-react-native": "^4.0.2",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-redux": "^7.2.4",
